--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,6 +53,20 @@
         app:srcCompat="@drawable/bruhsuke"
         tools:srcCompat="@drawable/bruhsuke" />
 
+    <ImageView
+        android:id="@+id/face2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="140dp"
+        android:layout_marginEnd="8dp"
+        android:contentDescription="@string/bruhface"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.96"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/negasuke"
+        tools:srcCompat="@drawable/negasuke" />
+
     <Button
         android:id="@+id/reset"
         android:layout_width="wrap_content"
